--- a/ContosoUniversity/appsettings.json
+++ b/ContosoUniversity/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "PageSize": 3,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolContext": "Data Source=CU.db"
+    "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=CU-1;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
