--- a/ContosoUniversity/appsettings.json
+++ b/ContosoUniversity/appsettings.json
@@ -9,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=CU-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SchoolContext": "Data Source=CU.db"
   }
 }
